[package]
name = "img-to-array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
clap = { version = "4.3", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
clap_complete = "4.3"
fern = { version = "0.6.2", features = ["colored", "chrono"] }
image = "0.24.6"
log="0.4"
